<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="deliveryapp">DeliveryApp</string>
    <string name="continue1">CONTINUE</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="start_a_new_delivery_experience">Start a new delivery experience</string>
    <string name="logo_transparent">Logo_Transparent</string>
    <string name="find_nearby_restaurants">Find nearby restaurants</string>
    <string name="filter_restaurants">Filter restaurants</string>
    <string name="rate_restaurants">Rate restaurants</string>
    <string name="filter_by">FILTER BY</string>
    <string name="cuisine">CUISINE</string>
    <string name="price_range">PRICE RANGE</string>
    <string name="ratings">RATINGS</string>
    <string name="choose_filters_to_narrow_down_your_search">Choose filters to narrow down your search</string>
    <string name="set_your_location_to_see_available_restaurants_matching_your_filters">Set your location to see available restaurants matching your filters</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="rating_options">Rating Options</string>
    <string name="price_range_options">Price Range Options</string>
    <string name="select">SELECT</string>
    <string name="back">BACK</string>
    <string name="cuisine_options">Cuisine Options</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="set_your_location_to_see_available_restaurants_near_you">Set your location to see available restaurants near you</string>
    <string name="rating">RATING</string>
    <string name="set_your_location_to_rate_restaurants_near_you">Set your location to rate restaurants near you</string>
    <string name="store_logo">Store logo</string>
    <string name="store_name">Store Name</string>
    <string name="how_would_you_rate_this_restaurant">How would you rate this restaurant?</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="choose_from_the_options_to_add_to_your_cart">Choose from the options to add to your cart</string>
    <string name="_0">0</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="product_name">Product Name</string>
    <string name="minus_button">Decrease quantity</string>
    <string name="plus_button">Increase quantity</string>
    <string name="description_placeholder">Description: N/A</string>
    <string name="avg_rating_placeholder">Avg Rating: N/A</string>
    <string name="price_range_placeholder">Price Range: N/A</string>
    <string name="cancel">CANCEL</string>
    <string name="buy">BUY</string>
    <string name="items_added_to_cart_successfully">Items added to cart successfully!</string>
    <string name="success">SUCCESS</string>
    <string name="your_order_will_be_with_you_shortly">Your order will be with you shortly</string>
    <string name="delivery_message_part1">The store got your order and will deliver your food in</string>
    <string name="delivery_message_part2">minutes!</string>
    <string name="bon_appetit">Bon Appetit!</string>
    <string name="receipt_sent_to_email">Your receipt has been sent to your email</string>
    <string name="delivery_message_with_minutes">The store got your order and will deliver your food in %d minutes!</string>
</resources>