<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <!-- "Product Name" Text -->
        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="#0F0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- "Product Price" Text -->
        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_0_00"
            android:textColor="#555555"
            android:textSize="14sp"
            android:layout_marginTop="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp">

        <!-- "-" Button -->
        <ImageButton
            android:id="@+id/minusButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_button_qty"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button" />

        <!-- "Quantity of product" Text -->
        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- "+" Button -->
        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_button_qty"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button" />

    </LinearLayout>

</LinearLayout>