<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:fitsSystemWindows="true"
    tools:context=".view.FilterActivities.PriceFilterActivity">

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <!-- "Price Range" Text -->
    <TextView
        android:id="@+id/price_range"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:fontFamily="@font/modak"
        android:text="@string/price_range"
        android:textAlignment="textStart"
        android:textColor="#ee4216"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- "Set your location to see available restaurants matching your filters" Text -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:fontFamily="@font/gentium_plus"
        android:text="@string/set_your_location_to_see_available_restaurants_matching_your_filters"
        android:textAlignment="textStart"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_range" />

    <!-- "Longitude" Button -->
    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- "Latitude" Button -->
    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

    <!-- "Price Range Options" Dropdown List -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginTop="77dp"
        android:hint="@string/price_range_options"
        app:boxStrokeColor="@color/box_stroke_color"
        app:endIconMode="dropdown_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <AutoCompleteTextView
            android:id="@+id/categoryAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="none"
            android:padding="0dp"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- "Submit" Button -->
    <ImageButton
        android:id="@+id/submitButton"
        android:layout_width="88dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/latitudeInput"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/submit_button" />

    <!-- "Back" Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="1"
        android:background="@drawable/rounded_button"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <!-- "Select" Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="1"
        android:background="@drawable/rounded_button"
        android:backgroundTintMode="add"
        android:text="@string/select"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <!-- Stores ListView -->
    <ListView
        android:id="@+id/list"
        android:layout_width="397dp"
        android:layout_height="462dp"
        android:background="@drawable/listview_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryInputLayout"
        app:layout_constraintVertical_bias="0.324" />

</androidx.constraintlayout.widget.ConstraintLayout>
